@@ -1,13 +1,12 @@
 package com.itemis.fluffyj.memory.internal;
 
-import static java.lang.foreign.SegmentAllocator.newNativeArena;
-
 import com.itemis.fluffyj.memory.api.FluffyScalarSegment;
 import com.itemis.fluffyj.memory.api.FluffySegment;
 import com.itemis.fluffyj.memory.internal.impl.FluffySegmentImpl;
 
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.SegmentAllocator;
+import java.lang.foreign.SegmentScope;
 import java.lang.foreign.ValueLayout;
 
 /**
@@ -25,16 +24,15 @@ public class IntSegment extends FluffySegmentImpl implements FluffyScalarSegment
      * Allocate a new segment.
      *
      * @param initialValue - The new segment will hold this value.
-     * @param session - The new segment will be attached to this session, i. e. if the session is
-     *        closed, the new segment will not be alive anymore.
+     * @param scope - The new segment will be attached to this scope.
      */
-    public IntSegment(int initialValue, MemorySession session) {
-        this(newNativeArena(session).allocate(ValueLayout.JAVA_INT, initialValue));
+    public IntSegment(int initialValue, SegmentScope scope) {
+        this(SegmentAllocator.nativeAllocator(scope).allocate(ValueLayout.JAVA_INT, initialValue));
     }
 
     /**
      * Wrap the provided {@code backingSeg}. The constructed segment will be attached to the same
-     * session as the {@code backingSeg}.
+     * scope as the {@code backingSeg}.
      *
      * @param backingSeg - The raw segment to wrap.
      */
